# custom-user-blog

./: pyproject.toml
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
static/css/: base.css
templates/: _base.html
templates/blog/: create_blog.html  home.html  post_detail.html
